--- a/Manager/templates/Manager/edit_department.html
+++ b/Manager/templates/Manager/edit_department.html
@@ -1,4 +1,4 @@
-{% extends 'base_administrateur.html' %}
+{% extends 'base_user.html' %}
 {% load static %}
 {% block title %}
     Modifier Département
