--- a/Employee/templates/Employee/login_employe.html
+++ b/Employee/templates/Employee/login_employe.html
@@ -34,8 +34,8 @@
                     <div class="card-body p-0">
                         <!-- Nested Row within Card Body -->
                         <div class="row">
-                            <div class="col-lg-6 d-none d-lg-block bg-login-image">
-                                <!-- <img src="{% static 'img/logo_ORTM.JPG' %}"> -->
+                            <div class="col-lg-6 d-none d-lg-block py-5">
+                                <img src="https://static.wikia.nocookie.net/logopedia/images/2/2d/ORTM_%28Madagascar%29_Logo.png/revision/latest?cb=20211122094706">
                             </div>
                             <div class="col-lg-6">
                                 <div class="p-5">
@@ -53,12 +53,16 @@
                                             <input type="password" class="form-control form-control-user"
                                                 id="password" placeholder="Password" name="password">
                                         </div>
-                                        {% if message %}
-                                            <div class="alert alert-danger">{{ message }}</div>
-                                        {% endif %}
+                                        {% for message in messages %}
+                                            <div class="alert alert-{{ message.tags }}">{{ message }}</div>
+                                        {% endfor %}
                                         <input type="submit" class="btn btn-primary btn-user btn-block" value="Se connecter" />
                                             
                                     </form>
+                                    <hr>
+                                    <div class="text-center">
+                                        <a class="small" href="">Forgot Password?</a>
+                                    </div>
                                 </div>
                             </div>
                         </div>
