--- a/Employee/templates/Employee/pointage_employe.html
+++ b/Employee/templates/Employee/pointage_employe.html
@@ -4,9 +4,12 @@
 	Formulaire pointage employé
 {% endblock title %}
 {% block content %}
+    {% for message in messages %}
+        <div class="alert alert-{{ message.tags }}">{{ message }}</div>
+    {% endfor %}
 <div class="d-sm-flex align-items-center justify-content-between mb-4">
         <h1>Pointage</h1>
-        <a href="{% url 'add_pointage_employe' %}" class="d-none d-sm-inline-block btn btn-sm btn-primary shadow-sm">Nouvel enregistrement</a>
+        <a href="{% url 'add_pointage_employe' %}" class="d-none d-sm-inline-block btn btn-sm btn-primary shadow-sm">Enregistrer Pointage</a>
 </div>
     <div class="d-sm-flex align-items-center justify-content-between mb-4">
         {% if start_date and end_date %}
@@ -30,11 +33,8 @@
                 Aucune plage de dates spécifiée.
             </p>
         {% endif %}
-        {% for message in messages %}
-            <div class="alert alert-{{ message.tags }}">{{ message }}</div>
-        {% endfor %}
+        
     </div>
-
     <form method="get" class="d-sm-flex align-items-center justify-content-between mb-4">
         <div class="row"> 
             <br>
