--- a/Manager/templates/Manager/department_list.html
+++ b/Manager/templates/Manager/department_list.html
@@ -1,4 +1,4 @@
-{% extends 'interface_bootstrap.html' %}
+{% extends 'base_user.html' %}
 {% load static %}
 {% block title %}
     Liste des département
