--- a/templates/interface_bootstrap.html
+++ b/templates/interface_bootstrap.html
@@ -42,6 +42,7 @@
                 <div class="sidebar-brand-icon">
                     <!-- <i class="fas fa-laugh-wink"></i> -->
                     <!-- <img src="{% static 'img/ORTM.png' %}"> -->
+                    
                 </div>
                 <div class="sidebar-brand-text mx-3">
                     ORTM
@@ -78,10 +79,10 @@
                 </a>
                 <div id="collapseTwo" class="collapse" aria-labelledby="headingTwo" data-parent="#accordionSidebar">
                     <div class="bg-white py-2 collapse-inner rounded">
-                        <h6 class="collapse-header">Concernant les personnels:</h6>
-                        <a class="collapse-item {% block liste_personnel %}{% endblock %}" href="{% url 'person_list' %}">Liste des personnels</a>
-                        <a class="collapse-item {% block pointage %}{% endblock %}" href="{% url 'pointage_list' %}">Pointages</a>
-                        <a class="collapse-item {% block shift %}{% endblock %}" href="{% url 'shift_list' %}">Shifts</a>
+                        <h6 class="collapse-header">Personnels:</h6>
+                        <a class="collapse-item {% block liste_personnel %}{% endblock %}" href="{% url 'administrateur_person_list' %}">Liste des personnels</a>
+                        <a class="collapse-item {% block pointage %}{% endblock %}" href="{% url 'administrateur_pointage_list' %}">Pointages</a>
+                        <a class="collapse-item {% block shift %}{% endblock %}" href="{% url 'administrateur_shift_list' %}">Shifts</a>
                     </div>
                 </div>
             </li>
@@ -91,13 +92,13 @@
                 <a class="nav-link collapsed" href="#" data-toggle="collapse" data-target="#collapseUtilities"
                     aria-expanded="true" aria-controls="collapseUtilities">
                     <i class="fa fa-th"></i>
-                    <span>Départements</span>
+                    <span>Services</span>
                 </a>
                 <div id="collapseUtilities" class="collapse" aria-labelledby="headingUtilities"
                     data-parent="#accordionSidebar">
                     <div class="bg-white py-2 collapse-inner rounded">
-                        <h6 class="collapse-header">Concernant les départements:</h6>
-                        <a class="collapse-item {% block liste_departement %}{% endblock %}" href="{% url 'department_list' %}">Listes des départements</a>
+                        <h6 class="collapse-header">Services:</h6>
+                        <a class="collapse-item {% block liste_departement %}{% endblock %}" href="{% url 'administrateur_department_list' %}">Listes des services</a>
                     </div>
                 </div>
             </li>
@@ -119,7 +120,7 @@
             </li>
             <hr class="sidebar-divider d-none d-md-block">
             <li class="nav-item {% block rapport %}{% endblock %}">
-                <a class="nav-link" href="{% url 'rapport_pointage' %}">
+                <a class="nav-link" href="{% url 'administrateur_rapport_pointage' %}">
                     <i class="fa fa-calendar"></i>
                     <span>Rapport de pointage</span></a>
             </li>
